# lily-agent

./: .editorconfig  .gitignore  CLAUDE.md  Makefile  README.md  compose.yaml  context.py  pyproject.toml
.github/workflows/: ci.yml  terraform.yml
db/: pyproject.toml
db/migrations/: 0001_init.sql  0002_section_page_type.sql  0003_search_sync_symptom.sql  0004_part_symptoms_fixed.sql  0005_symptom_vocab.sql  0006_symptom_vocab_round2.sql  0007_demo_orders.sql
db/src/lily_db/: __init__.py  migrate.py
db/tests/: conftest.py  test_schema.py
docs/: ARCHITECTURE.md  DECISIONS.md  PRD.md  WINS-LOG.md  demo-notes.md
docs/adr/: 0001-phase0-edge-scope.md  0002-uv-workspace.md
docs/runbooks/: phase0.md  phase4.md
evals/: README.md  cases.jsonl  run.py  seed.py
frontend/: .dockerignore  Dockerfile  README.md  next.config.mjs  package.json  pnpm-lock.yaml  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/chat/: route.ts
frontend/app/api/feedback/: route.ts
frontend/app/api/health/: route.ts
frontend/components/: Cards.tsx  Chat.tsx  Citations.tsx  ComparisonCardView.tsx  ErrorCard.tsx  Feedback.tsx  Markdown.tsx  MessageBubble.tsx  ModelBadge.tsx  OrderCardView.tsx  ProductCardView.tsx  QuickReplies.tsx  StatusChip.tsx  StreamingText.tsx  icons.tsx
frontend/lib/: sse.ts  streamingMarkdown.ts  types.ts  useChat.ts
frontend/tests/: cards.test.tsx  chat.test.tsx  components.test.tsx  helpers.ts  icons.test.tsx  markdown.test.tsx  sse.test.ts  streamingMarkdown.test.ts
k8s/charts/etl-crawl/: Chart.yaml  values.yaml
k8s/charts/etl-crawl/templates/: _helpers.tpl  configmap.yaml  externalsecret.yaml  job.yaml  serviceaccount.yaml
k8s/charts/frontend/: Chart.yaml  values.yaml
k8s/charts/gateway/: Chart.yaml  values.yaml
k8s/charts/redis/: Chart.yaml  values.yaml
k8s/charts/redis/templates/: service.yaml  (+1 more)
k8s/values/agent/: gateway.yaml
k8s/values/data/: etl-crawl.yaml
k8s/values/frontend/: frontend.yaml
k8s/values/observability/: fluent-bit.yaml.tpl  jaeger.yaml  kube-prometheus-stack.yaml
libs/common/: pyproject.toml
libs/common/src/lily_common/: __init__.py  backoff.py  db.py  health.py  logging.py  metrics.py  ratelimit.py  retry.py  robots.py  s3keys.py
libs/common/tests/: test_backoff.py  test_health.py  test_logging.py  test_metrics.py  test_ratelimit.py  test_retry.py  test_robots.py  test_s3keys.py
libs/search/: pyproject.toml
libs/search/src/lily_search/: __init__.py  client.py  embeddings.py  index.py
libs/search/tests/: test_index.py
local/prometheus/: prometheus.yml
pipeline/crawler/: Dockerfile  README.md  pyproject.toml
pipeline/crawler/src/lily_crawler/: __init__.py  aws.py  browser.py  budget.py  fetcher.py  runner.py  sitemap.py  urls.py
pipeline/crawler/src/lily_crawler/tools/: __init__.py  capture_fixtures.py
pipeline/crawler/tests/: test_budget.py  test_fetcher.py  test_sitemap.py  test_urls.py
pipeline/etl/: Dockerfile  README.md  pyproject.toml
pipeline/etl/src/lily_etl/: __init__.py  index_jobs.py  indexer.py  runner.py  upsert.py
pipeline/etl/src/lily_etl/tools/: __init__.py  prove_search.py  seed_crawl.py
pipeline/etl/tests/: conftest.py  test_etl_e2e.py  test_fetch_cap.py  test_index_jobs.py  test_indexer.py  test_symptom_parts.py
pipeline/parsers/: README.md  pyproject.toml
pipeline/parsers/src/lily_parsers/: __init__.py  _html.py  contract.py  dispatch.py  dto.py  model.py  part.py  section.py  symptom.py
pipeline/parsers/tests/: conftest.py  test_parsers.py
pipeline/parsers/tests/fixtures/: README.md  broken-part.html  model-dishwasher.html  model-fridge.html  part-dishwasher-breadcrumb.html  part-dishwasher.html  part-fridge.html  repair-index-fridge.html  robots.html  section-cover-sheet.html  section-fridge-door.html  section-fridge.html  symptom-detail-icemaker.html  symptom-fridge.html
scripts/: a9_probe.py  scale-down.sh  scale-up.sh
services/catalog/: README.md  pyproject.toml
services/catalog/src/lily_catalog/: __init__.py  models.py  tools.py
services/catalog/tests/: conftest.py  test_catalog_tools.py
services/gateway/: Dockerfile  pyproject.toml
services/gateway/src/gateway/: __init__.py  chat.py  feedback.py  graph_runner.py  main.py  telemetry.py
services/gateway/tests/: conftest.py  test_chat.py  test_feedback.py  test_main.py  test_telemetry.py
services/notifications/: README.md
services/orchestrator/: README.md  pyproject.toml
services/orchestrator/src/lily_orchestrator/: __init__.py  cards.py  converse.py  entities.py  graph.py  guardrails.py  prompts.py  router.py  specialists.py  state.py  validator.py
services/orchestrator/src/lily_orchestrator/tools/: __init__.py  guardrail_demo.py  router_demo.py  specialist_demo.py
services/orchestrator/tests/: conftest.py  test_cards.py  test_converse.py  test_entities.py  test_graph.py  test_guardrails.py  test_router.py  test_specialists.py  test_validator.py
services/orders/: README.md  pyproject.toml
services/orders/src/lily_orders/: __init__.py  models.py  tools.py
services/orders/tests/: conftest.py  test_orders_tools.py
services/retrieval/: README.md  pyproject.toml
services/retrieval/src/lily_retrieval/: __init__.py  models.py  tools.py
services/retrieval/tests/: conftest.py  test_retrieval_tools.py
terraform/: README.md
terraform/bootstrap/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/aurora/: main.tf  outputs.tf  variables.tf
terraform/modules/bedrock-guardrail/: main.tf  outputs.tf  variables.tf
terraform/modules/dns/: main.tf  outputs.tf  variables.tf
terraform/modules/ecr/: main.tf  outputs.tf  variables.tf
terraform/modules/eks/: addons.tf  main.tf  nodegroups.tf  outputs.tf  variables.tf  versions.tf
terraform/modules/github-oidc/: main.tf  outputs.tf  variables.tf
terraform/modules/irsa/: main.tf  outputs.tf  variables.tf
terraform/modules/network/: main.tf  outputs.tf  variables.tf
terraform/modules/opensearch/: main.tf  outputs.tf  variables.tf
terraform/modules/s3-sqs/: main.tf  outputs.tf  variables.tf
(+38 files in other folders)
