[project]
name = "lily"
version = "0.0.0"
description = "Lily — PartSelect chat agent monorepo (workspace root, not a package)"
requires-python = ">=3.12"
# Root depends on every member so `uv sync` installs the whole workspace.
dependencies = [
  "lily-common",
  "lily-gateway",
  "lily-db",
]

[tool.uv]
package = false
dev-dependencies = [
  "ruff>=0.7",
  "mypy>=1.13",
  "pytest>=8.3",
  "httpx>=0.27",
]

[tool.uv.workspace]
# Explicit members: add each service/pipeline package here as it gains code.
# Placeholder dirs (README-only) must NOT be listed.
members = [
  "libs/common",
  "services/gateway",
  "db",
]

[tool.uv.sources]
lily-common = { workspace = true }
lily-gateway = { workspace = true }
lily-db = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["lily_common", "gateway", "lily_db"]

[tool.mypy]
strict = true
python_version = "3.12"
mypy_path = ["libs/common/src", "services/gateway/src", "db/src"]
explicit_package_bases = true
namespace_packages = true

[tool.pytest.ini_options]
testpaths = ["libs", "services", "pipeline", "evals", "db"]
addopts = "-q"
