[project]
name = "lily"
version = "0.0.0"
description = "Lily — PartSelect chat agent monorepo (workspace root, not a package)"
requires-python = ">=3.12"
# Root depends on every member so `uv sync` installs the whole workspace.
dependencies = [
  "lily-common",
  "lily-gateway",
  "lily-db",
  "lily-crawler",
  "lily-parsers",
  "lily-etl",
  "lily-search",
  "lily-catalog",
  "lily-retrieval",
  "lily-orders",
]

[tool.uv]
package = false
dev-dependencies = [
  "ruff>=0.7",
  "mypy>=1.13",
  "pytest>=8.3",
  "httpx>=0.27",
]

[tool.uv.workspace]
# Explicit members: add each service/pipeline package here as it gains code.
# Placeholder dirs (README-only) must NOT be listed.
members = [
  "libs/common",
  "libs/search",
  "services/gateway",
  "services/catalog",
  "services/retrieval",
  "services/orders",
  "db",
  "pipeline/crawler",
  "pipeline/parsers",
  "pipeline/etl",
]

[tool.uv.sources]
lily-common = { workspace = true }
lily-gateway = { workspace = true }
lily-db = { workspace = true }
lily-crawler = { workspace = true }
lily-parsers = { workspace = true }
lily-etl = { workspace = true }
lily-search = { workspace = true }
lily-catalog = { workspace = true }
lily-retrieval = { workspace = true }
lily-orders = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["lily_common", "gateway", "lily_db", "lily_crawler", "lily_parsers", "lily_etl", "lily_search", "lily_catalog", "lily_retrieval", "lily_orders"]

[tool.mypy]
strict = true
python_version = "3.12"
mypy_path = ["libs/common/src", "services/gateway/src", "db/src", "pipeline/crawler/src", "pipeline/parsers/src", "pipeline/etl/src", "libs/search/src", "services/catalog/src", "services/retrieval/src", "services/orders/src"]
explicit_package_bases = true
namespace_packages = true

# boto3 and selectolax ship no type stubs. Strict everywhere else.
[[tool.mypy.overrides]]
module = ["boto3", "boto3.*", "selectolax", "selectolax.*", "opensearchpy", "opensearchpy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["libs", "services", "pipeline", "evals", "db"]
addopts = "-q"
