[project]
name = "lily-db"
version = "0.1.0"
description = "Schema migrations + runner for the Lily database (Aurora pg16 / local compose)"
requires-python = ">=3.12"
dependencies = [
  "psycopg[binary]>=3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lily_db"]

# Ship the .sql migrations inside the wheel so the runner finds them in the
# container image (the migrate runner looks package-relative first).
[tool.hatch.build.targets.wheel.force-include]
"migrations" = "lily_db/migrations"
