[project]
name = "lily-common"
version = "0.1.0"
description = "Shared utilities for Lily services: structured logging, health endpoints"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lily_common"]
