[project]
name = "lily-common"
version = "0.1.0"
description = "Shared utilities for Lily services: logging, health, retry/backoff, db"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "psycopg[binary]>=3.2",
  "prometheus-client>=0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lily_common"]
