[project]
name = "lily-search"
version = "0.1.0"
description = "Shared search: Titan v2 embeddings, OpenSearch retrieval index + hybrid BM25+kNN query"
requires-python = ">=3.12"
dependencies = [
  "opensearch-py>=2.6",
  "boto3>=1.35",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lily_search"]
