[project]
name = "lily-crawler"
version = "0.1.0"
description = "Lily ingestion crawler: sitemap discovery + Chrome-channel fetcher (D12)"
requires-python = ">=3.12"
dependencies = [
  "lily-common",
  "lily-db",
  # Runtime dep, not dev: the fetcher runs Playwright in the pod. Headless is
  # Akamai-403'd, so the image must ship the real Chrome binary (Dockerfile
  # runs `playwright install --with-deps chrome`).
  "playwright>=1.60.0",
  "boto3>=1.35",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lily_crawler"]
