[project]
name = "lily-etl"
version = "0.1.0"
description = "Lily ETL: parsed DTOs -> Aurora upserts, staleness janitor, index-jobs enqueue"
requires-python = ">=3.12"
dependencies = [
  "lily-common",
  "lily-db",
  "lily-parsers",
  "lily-search",
  "psycopg[binary]>=3.2",
  "boto3>=1.35",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lily_etl"]
