[project]
name = "lily-parsers"
version = "0.1.0"
description = "Lily parsers: structured extraction from raw S3 HTML (read-only, drift-asserting)"
requires-python = ">=3.12"
dependencies = [
  "lily-common",
  "selectolax>=0.3.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lily_parsers"]
