[project]
name = "lily-catalog"
version = "0.1.0"
description = "Catalog tools: compatibility, part details, model lookup (typed SQL over Aurora)"
requires-python = ">=3.12"
dependencies = [
  "lily-common",
  "psycopg[binary]>=3.2",
  "pydantic>=2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lily_catalog"]
