[project]
name = "lily-gateway"
version = "0.1.0"
description = "Lily chat gateway — FastAPI SSE entrypoint (Phase 0: health stub)"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "lily-common",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gateway"]
