[project]
name = "lily-orchestrator"
version = "0.1.0"
description = "LangGraph agent graph: router -> specialists -> validator -> guardrails"
requires-python = ">=3.12"
dependencies = [
  "lily-common",
  "lily-catalog",
  "lily-orders",
  "lily-retrieval",
  "lily-search",
  "langgraph>=0.2",
  "langgraph-checkpoint>=2.0",
  "redis>=5.0",
  "boto3>=1.35",
  "pydantic>=2.9",
  "opentelemetry-api>=1.27",  # bedrock.converse span (NFR-17); SDK provided by the host
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lily_orchestrator"]
