[project]
name = "lily-orders"
version = "0.1.0"
description = "Order tools: status lookup + return initiation (typed SQL over mock commerce schema)"
requires-python = ">=3.12"
dependencies = [
  "lily-common",
  "psycopg[binary]>=3.2",
  "pydantic>=2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lily_orders"]
