[project]
name = "lily-retrieval"
version = "0.1.0"
description = "Retrieval tools: hybrid part search + symptom diagnosis (OpenSearch + Bedrock + catalog)"
requires-python = ">=3.12"
dependencies = [
  "lily-common",
  "lily-search",
  "lily-catalog",
  "psycopg[binary]>=3.2",
  "pydantic>=2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lily_retrieval"]
